--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <form action="" method="post" class="col s12" id="notification">
                 <div class="row">
                     <div class="input-field col s12">
-                        <input type="text" name="token" id="tikenInputId" value="" class="validate">
-                        <label for="title">Notification title</label>
+                        <input type="text" name="token" id="tikenInputId" value=" " class="validate">
+                        <label for="title">Token ID</label>
                     </div>
                     <div class="input-field col s12">
                         <input type="text" name="title" id="title" value="Bubble Nebula" class="validate">
