--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ limitations under the License.
   // [END get_messaging_object]
   // [START set_public_vapid_key]
   // Add the public key generated from the console here.
-  messaging.usePublicVapidKey('<YOUR_PUBLIC_VAPID_KEY_HERE>');
+  messaging.usePublicVapidKey('AAAAxuVwm6g:APA91bFXLAGVmq74MozJZDj3rY6fjtvUDVWFMPLD3xW8wn_l8wsQkeb1zNT2MvynS9Kv8vq6Ecusre76Hk26FM4bcixNMxQ32y1oT2eETLlkx2UVvQJWk9rAs7lKHUOYrVlxjAdISPaq');
   // [END set_public_vapid_key]
 
   // IDs of divs that display Instance ID token UI or request permission UI.
