--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ limitations under the License.
 <!-- If you do not serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
 <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase-messaging.js"></script>
-<!--<script src="https://www.gstatic.com/firebasejs/5.8.6/firebase/init.js"></script>-->
+<script src="https://www.gstatic.com/firebasejs/5.8.6/firebase/init.js"></script>
 
 <script>
   // [START get_messaging_object]
