--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@ limitations under the License.
 
 <script>
    firebase.initializeApp({
-	   			messagingSenderId: '854252886952'
+	apiKey: "AAAAxuVwm6g:APA91bFXLAGVmq74MozJZDj3rY6fjtvUDVWFMPLD3xW8wn_l8wsQkeb1zNT2MvynS9Kv8vq6Ecusre76Hk26FM4bcixNMxQ32y1oT2eETLlkx2UVvQJWk9rAs7lKHUOYrVlxjAdISPaq",
+   	 messagingSenderId: "854252886952"
 			});
+	
   // [START get_messaging_object]
   // Retrieve Firebase Messaging object.
   const messaging = firebase.messaging();
