--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ limitations under the License.
     </div>
   </main>
 </div>
-
+ <input type="text" size="100">
 <!-- Import and configure the Firebase SDK -->
 <!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
 <!-- If you do not serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
