--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ limitations under the License.
 <head>
   <meta charset=utf-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, height=device-height,  initial-scale=1.0, user-scalable=no;user-scalable=0;"/>
   <title>Firebase Cloud Messaging Example</title>
 
   <!-- Material Design Theming -->
