--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <body>
   <p style="text-align: center">
   <button onclick="document.getElementById('myIframe123').src='https://sedchat.sichbank.com/livechat-manager/users';">Користувачі</button>
- <button  onclick="document.getElementById('myIframe123').src='https://sedchat.sichbank.com/livechat-manager/current';">Усі повідомлення</button></p>
-
+ <button  onclick="document.getElementById('myIframe123').src='https://sedchat.sichbank.com/livechat-manager/current';">Усі повідомлення</button>
+ <a target="_blank" href="https://sedchat.sichbank.com/livechat-manager/users">Користувачі у новому вікні   .</a>
+ <a target="_blank" href="https://sedchat.sichbank.com/livechat-manager/current">.   Усі повідомлення у новому вікні</a>
+</p>
   
 <iframe id="myIframe123" src="https://sedchat.sichbank.com/livechat-manager/users" width="100%" height="100%" style="position: absolute; height: 100%; border: none">
 </iframe>
 
 </body>
 </html>
+
