--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <p style="text-align: center">
    <button onclick="showHideMenuInChat();">Поточні чати</button>
    <button onclick="document.getElementById('myIframe123').src='https://sedchat.sichbank.com/livechat-manager/users';">Користувачі</button>  
+	  <button onclick="document.getElementById('myIframe123').src='https://sedchat.sichbank.com/account/profile';">мій профіль</button>  
  <button  onclick="document.getElementById('myIframe123').src='https://sedchat.sichbank.com/livechat-manager/current';">Усі повідомлення</button>
  <a target="_blank" href="https://sedchat.sichbank.com/livechat-manager/users">Користувачі у новому вікні   .</a>
  <a target="_blank" href="https://sedchat.sichbank.com/livechat-manager/current">.   Усі повідомлення у новому вікні</a> 
