--- a/color.html
+++ b/color.html
@@ -15,7 +15,7 @@ const json2 = {1: {color: #ff855723, info: ОСН КОЛІР1}, 2: {color: #ffa2
  myFunction(json2);
 document.getElementById("name").value=json2;
 function myFunction(json) {
-const obj = JSON.parse(json);
+const obj = json;//JSON.parse(json);
 
 var s="";
 var lengthMyMap = 1;
